# ffmpeg-practice

./: .gitignore  CMakeLists.txt
src/getFrame/: main.c
